--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "decoright-webxr",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "homepage": "https://github.com/sudhir9297/Decoright-Webxr",
   "scripts": {
     "dev": "vite",
@@ -13,9 +12,15 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.19",
+    "gh-pages": "^6.1.1",
+    "postcss": "^8.4.39",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.0"
+    "react-router-dom": "^6.25.0",
+    "react-script": "^2.0.5",
+    "react-spring": "^9.7.3",
+    "react-spring-carousel": "^2.0.19"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -25,6 +30,9 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "tailwindcss": "^3.4.6",
     "vite": "^5.3.4"
   }
 }
