product page complete

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@react-three/drei": "^9.108.4",
+    "@react-three/fiber": "^8.16.8",
     "autoprefixer": "^10.4.19",
     "gh-pages": "^6.1.1",
     "postcss": "^8.4.39",
@@ -20,7 +22,8 @@
     "react-router-dom": "^6.25.0",
     "react-script": "^2.0.5",
     "react-spring": "^9.7.3",
-    "react-spring-carousel": "^2.0.19"
+    "react-spring-carousel": "^2.0.19",
+    "three": "^0.166.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
